# stitchlands-redux

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
docs/: pawn-render-debug-log.md  pawn-rendering-research.md  vision.md
docs/investigation/: investigation_prompt.md  research_prompt.md
docs/plans/: codebase_review_findings.md  compat_profile_v0.md  parity_fixtures_v0.md  render_parity_contract.md  v1_definition_of_done.md  v1_plan.md  v2_implementation_plan.md  v2_plan.md  v2_remaining_foundation_plan.md
docs/research/: README.md  def-semantics-render.md  frame-pipeline.md  graphic-resolution.md  pawn-layering.md  symbol-map.md
fixtures/v2/: glower_lighting.ron  lighting_overlay.ron  mixed_things_pawns.ron  move_lane.ron  obstacle_pathing.ron  shadow_data.ron  single_wall_static_shadow.ron  single_wall_static_shadow_opposite.ron  single_wall_static_shadow_top_right.ron  terrain_mix.ron  walls_patterns.ron  water.ron  water_smoke.ron
plans/: BACKLOG.md  README.md
plans/apparel-scale-fix/: adversarial_2.md  draft_2.md
plans/v1-removal/: plan.md
src/: app_context.rs  asset_resolver.rs  assets.rs  cell.rs  cli.rs  colored_overlay.wgsl  colored_overlay_multiply.wgsl  commands.rs  default_config.rs  defs.rs  edge_shader.wgsl  linking.rs  main.rs  packed_index.rs  packed_textures.rs  renderer.rs  rimworld_paths.rs  scene.rs  shader.wgsl  sun_shadow.wgsl  typetree_registry.rs  viewer.rs  water_assets.rs  water_depth.wgsl  water_surface.wgsl
tests/: pawn_fixture_golden.rs  v0_smoke.rs  v1_golden.rs  v1_smoke.rs  v2_smoke.rs
(+63 files in other folders)
