[package]
name = "stitchlands-redux"
version = "0.1.0"
edition = "2021"
default-run = "stitchlands-redux"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.15", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
pollster = "0.4"
roxmltree = "0.20"
unity-asset = "0.2"
unity-asset-core = "0.2"
unity-asset-decode = { version = "0.2", features = ["texture-advanced"] }
walkdir = "2.5"
wgpu = "0.20"
winit = "0.30"
